--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 .butt{
 	display: block;
-	font-size: 20px;
-	margin-top: 20px;
-	margin-bottom: 10vh;
-	margin-right: 180px;
-	margin-left: 40px;
-	height: 380px;
-	width: 300px;
+	font-size: 5%;
+	margin-top: 8%;
+	margin-bottom: 2vh;
+	margin-right: 5%;
+	margin-left: 15%;
+	height: 20%;
+	width: 60%;
 }
 
 .container {
