--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 <body>
 
 <div class="container">
-<img src='mastercard tap&go button.png'>
-<img src='mastercard tap&go Express.png'>
-<img src='mastercard Ebook button.png'>
+<a href="https://www.w3schools.com"><img class="butt" src='mastercard tap&go button.png'></a>
+<a href="https://www.w3schools.com"><img class="butt" src='mastercard tap&go Express.png'></a>
+<a href="https://www.w3schools.com"><img class="butt" src='mastercard Ebook button.png'></a>
 <img src='MC logo - black(horizontal).png' class="responsive" width="500vh" height="400vh">
 </div>
 
