--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 .butt{
 	display: block;
 	font-size: 5%;
+	padding: 15px 20px;
 	margin-top: 8%;
 	margin-bottom: 2vh;
-	margin-right: 5%;
-	margin-left: 10%;
-	height: 30%;
-	width: 65%;
+	margin: auto;
+	height: 30vh;
+	width: 25vh;
 }
 
 .container {
