--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
 <body cz-shortcut-listen="true">
 
 <div class="container">
-<a href="https://www.w3schools.com"><img class="butt" src='mastercard tap&go button.png'></a>
-<a href="https://www.w3schools.com"><img class="butt" src='mastercard tap&go Express.png'></a>
-<a href="https://www.w3schools.com"><img class="butt" src='mastercard Ebook button.png'></a>
-<img src='MC logo - black(horizontal).png' class="responsive" width="400vh" height="300vh" style="flex:1; align-self: center; height: 20vh; width:auto;">
+	<a href="https://www.w3schools.com" class="item" >
+	<img class ="butt "src='mastercard tap&go button.png'></a>
+	<a href="https://www.w3schools.com" class="item">
+	<img class="butt" src='mastercard tap&go Express.png'></a>
+	<a href="https://www.w3schools.com" class="item">
+	<img class="butt" src='mastercard Ebook button.png'></a>
+	<img src="MC logo - black(horizontal).png" class="responsive" width="400vh" height="300vh" style="flex: 1; align-self: center; height: 20vh; width: auto;">
 </div>
 
 </body>
